# Viewer_OpenGL

./: .gitignore  README.md
Viewer/: CMakeLists.txt  abstractpart.cpp  abstractpart.h  assembly.cpp  assembly.h  face.cpp  face.h  main.cpp  material.cpp  material.h  matrixh.cpp  matrixh.h  mesh.cpp  mesh.h  meshmanager.cpp  meshmanager.h  part.cpp  part.h  partmanager.cpp  partmanager.h  point.cpp  point.h  snowman.cpp  snowman.h  utility.h  vector.cpp  vector.h  vertex.cpp  vertex.h  viewer.cpp  viewer.h  viewer3.cpp  viewer3.h
Viewer-build/: CMakeCache.txt  Makefile  Viewer  Viewer.cbp  cmake_install.cmake
